<resources>
    <string name="app_name">Ma_Kim</string>
    <string name="family_member_header">Family member:</string>
    <string name="sys_reading_header">Systolic Reading:</string>
    <string name="dia_reading_header">DiastolicReading:</string>
    <string name="avg_reading_header">Average Condition:</string>
    <string name="id_extra">id</string>
    <string name="mtd_Text">Month to Date Report</string>
    <string name="error">ERROROROR</string>
    <string name="hint_systolic">Input Systolic Reading</string>
    <string name="hint_diastolic">Input Diastolic Reading</string>
    <string name="edit_reading">Edit Reading</string>
    <string name="user_id">User</string>
    <string name="reading_date">Day</string>
    <string name="systolic_readings">Systolic Reading</string>
    <string name="diastolic_reading">Diastolic Reading</string>
    <string name="condition_reading">Condition Reading</string>
    <string name="condition">Condition</string>
    <string name="generate_report">Generate MTD Report</string>
    <string name="systolic">Systolic</string>
    <string name="diastolic">Diastolic</string>
    <string name="add_blood_pressure_txt">Add Blood Pressure</string>
    <string name="edit_blood_pressure_txt">Edit Blood Pressure</string>
    <string name="systolic_pressure">Systolic Pressure</string>
    <string name="diastolic_pressure">Diastolic Pressure</string>
    <string name="add_reading"> Add Reading </string>
    <string name="success">Edited values successfully!</string>
    <string name="successAdd">Added Reading Successfully!</string>
    <string name="clearText">Clear Reading</string>
    <string name="successEdit">Edited Successfully</string>
    <string name="errorEdit">Failed to edit reading</string>
    <string name="delete_reading">Delete</string>
    <string name="edit_reading_hint">mm/dd/yyyy</string>

       <string-array name="familyMember">
        <item>father@home.com</item>
        <item>mother@home.com</item>
        <item>grandma@home.com</item>
        <item>grandpa@home.com</item>
    </string-array>

    <string-array name="month">
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>May</item>
        <item>Jun</item>
        <item>Jul</item>
        <item>Aug</item>
        <item>Sept</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
    </string-array>


</resources>