<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditEntryActivity">

    <TableLayout
        android:id="@+id/inputLayout"
        android:layout_width="350dp"
        android:layout_height="259dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/reading_date" />

            <EditText
                android:id="@+id/readingDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:editable="false"
                android:hint="@string/edit_reading_hint" />
        </TableRow>


        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/systolic_pressure" />

            <EditText
                android:id="@+id/textViewSystolicReading"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/systolic_readings"
                android:inputType="number" />
        </TableRow>


        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/diastolic_pressure" />

            <EditText
                android:id="@+id/textViewDiastolicReading"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/diastolic_reading"
                android:inputType="number" />
        </TableRow>


        <TableRow>

            <Button
                android:id="@+id/bt_delete"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:layout_weight="1"
                android:onClick="deleteReading"
                android:text="@string/delete_reading" />

            <Button
                android:id="@+id/bt_edit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:layout_weight="1"
                android:onClick="editReading"
                android:text="@string/edit_reading" />

        </TableRow>
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
