<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/rootLayout"
    tools:context=".MTDReportActivity">

    <Button
        android:id="@+id/btnGenReport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/generate_report"
        app:layout_constraintTop_toBottomOf="@+id/spUserReport"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="111dp" />

    <Spinner
        android:id="@+id/spUserReport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:entries="@array/users"
        android:hint="@string/user_id"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/btnGenReport"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.595"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TableLayout
        android:id="@+id/reportTable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/btnGenReport">

        <TableRow>
            <TextView android:text="@string/systolic" />
            <TextView
                android:id="@+id/textViewSystolicAve"
                android:text=""
                android:gravity="right"
                />
        </TableRow>
        <TableRow>

            <TextView android:text="@string/diastolic" />
            <TextView
                android:id="@+id/textViewDiastolicAve"
                android:text=""
                android:gravity="right"
                />
        </TableRow>
        <TableRow>

            <TextView
                android:layout_marginRight="5dp"
                android:text="@string/condition" />
            <TextView
                android:id="@+id/textViewConditionAve"
                android:text=""
                android:gravity="right"
                />
        </TableRow>
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>