<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <Spinner
        android:id="@+id/spinnerID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/users"
        />

    <EditText
        android:id="@+id/textViewSystolic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_systolic"
        />

    <EditText
        android:id="@+id/textViewDiastolic"
        android:layout_width="match_parent"
    android:layout_height="wrap_content"
        android:hint="@string/hint_diastolic"

    />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnAddReport"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/add_Report" />

        <Button
            android:id="@+id/btnGoToMTDActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/mtd_Text" />
    </LinearLayout>

</LinearLayout>